# PixVisionPyServer

./: .env  .env.example  .gitignore  AI_AUDIT_GUIDE.md  ARCHITECTURE.md  README.md  WinStart.bat  pyproject.toml  python-server-conf.example.json
.github/workflows/: notify-parent.yml
app/: main.py
app/core/: config.py  exceptions.py
app/core/prompts/: __init__.py  ai_audit_system.md
app/routers/: accounts.py  ai_audit.py
app/schemas/: audit.py  bilibili.py  response.py
app/services/: ai_audit_service.py  base_service.py  bilibili_service.py  service_factory.py
app/static/: index.html
doc/: B站账号检测 API 集成文档.md
doc/功能设计初稿/: ai文案智能审核设计稿.md
