[project]
name = "PixVisionPyServer"
version = "1.0.0"
description = "像素视觉 - 辅助服务"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "fastapi-offline>=1.7.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.47.0",
    "openai>=1.3.1",
    "requests>=2.31.0",
]
